<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Information">
    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/cart"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="49sp"
        android:background="@color/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">
    </TextView>
    <TextView
        android:id="@+id/nameTV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTV"
        app:layout_constraintVertical_bias="0.05">
    </TextView>
    <TextView
        android:id="@+id/realNameTV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTV"
        app:layout_constraintVertical_bias="0.01">
    </TextView>
    <TextView
        android:id="@+id/surnameTV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/surname"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/realNameTV"
        app:layout_constraintVertical_bias="0.05">
    </TextView>
    <TextView
        android:id="@+id/realSurnameTV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/surname"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surnameTV"
        app:layout_constraintVertical_bias="0.01">
    </TextView>
    <TextView
        android:id="@+id/addressTV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/address"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/realSurnameTV"
        app:layout_constraintVertical_bias="0.05">
    </TextView>
    <TextView
        android:id="@+id/realAddressTV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/address"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressTV"
        app:layout_constraintVertical_bias="0.01">
    </TextView>
    <TextView
        android:id="@+id/numberTV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/number"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/realAddressTV"
        app:layout_constraintVertical_bias="0.05">
    </TextView>
    <TextView
        android:id="@+id/realNumberTV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/number"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberTV"
        app:layout_constraintVertical_bias="0.01">
    </TextView>
    <Button
        android:id="@+id/backBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/realNumberTV"
        app:layout_constraintVertical_bias="0.3">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>